fix: box shadow on mobile crew member

--- a/FE/src/pages/crewMember/CrewMember.scss
+++ b/FE/src/pages/crewMember/CrewMember.scss
@@ -8,7 +8,6 @@
 .crew-member {
     max-width: 800px;
     display: grid;
-    gap: var(--gap);
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     margin: 0 auto;
     &__image {
@@ -17,9 +16,10 @@
         & img {
             width: 100%;
             height: auto;
-            object-fit: cover;
-            box-shadow: var(--box-shadow);
             animation: var(--animation-cards);
+            @include respond(desktop){
+                box-shadow: var(--box-shadow);
+            }
         }
     }
     &__text {
